--- a/trunk/web/miss/index.html
+++ b/trunk/web/miss/index.html
@@ -51,6 +51,9 @@
                     <h2>Pardus Haberleri</h2>
                     <ul>
                         <li>
+                        <p class="metin"><strong>14 Mayıs 2008</strong> // <a href="http://www.ozgurlukicin.com" target="_blank">Özgürlükiçin</a> topluluğunun çıkardığı E-Dergi, ikinci sayısını yayınladı. E-Dergi'ye <a href="http://www.ozgurlukicin.com/e-dergi/" target="_blank">buradan</a> ulaşabilirsiniz.</p>
+                        </li>
+                        <li>
                         <p class="metin"><strong>9 Mayıs 2008</strong> // 2008 yazında Pardus <a href="http://tr.pardus-wiki.org/Staj2008" target="_blank">yaz stajı programı</a>na katılacak isimler belli oldu. Bu yaz 21 öğrenci Pardus için çalışacak.</p>
                         </li>
                         <li>
@@ -58,9 +61,6 @@
                         </li>
                         <li>
                         <p class="metin"><strong>24 Nisan 2008</strong> // <a href="http://code.google.com/soc/2008/pardus/about.html" target="_blank">Google Summer of Code</a>'a kabul edilen Pardus Projesi'nde staj yapacak öğrenciler belli oldu.</p>
-                        </li>
-                        <li>
-                        <p class="metin"><strong>10 Nisan 2008</strong> // <a href="http://www.ozgurlukicin.com" target="_blank">Özgürlükiçin</a> topluluğunun çıkardığı E-Dergi, ilk sayısını yayınladı. E-Dergi'ye <a href="http://www.ozgurlukicin.com/e-dergi/" target="_blank">buradan</a> ulaşabilirsiniz.</p>
                         </li>
 			<li>
 			    <p class="metin"><strong>23 Şubat 2008</strong> // Pardus E-Bülten'i, ilk sayısıyla yayına başladı. Bülten bölümünden <a href="bulten/index.html">ulaşabilirsiniz.</a>
