--- a/web/miss/eng/index.html
+++ b/web/miss/eng/index.html
@@ -40,13 +40,12 @@
                     <h2>Don't bother to search, Pardus@Google SOC!</h2>
                     <img src="../resim/summerofcode.png" align="right" width="240" height="321" border="0" alt="Pardus" style="padding-top: 4px; padding-left: 8px;" />
 
-<p>Google Summer of Code is one of the biggest projects in open-source world till it started. Over the past three years, the program has brought together over 1500 students and 2000 mentors from 90 countries worldwide.
+<p>Google Summer of Code is one of the biggest projects in open-source world since it started. Over the past three years, the program has brought together over 1500 students and 2000 mentors from 90 countries worldwide.
 </p>
 <p>
 Now, parallel to the internship programme of TÜBİTAK/UEKAE for Turkish college students, students worldwide will meet with Pardus during Google Summer of Code.</p>
 <p>
-The contributions in both projects will be available in Pardus as well as for all free software projects in Autumn '08. Pardus was selected to programme with many great free software projects with 4 other GNU/Linux distributions Debian, Fedora&JBoss, Gentoo, openSUSE.
-</p>
+The contributions in both projects will be available in Pardus as well as for all free software projects in Autumn '08. Pardus was selected to programme with many great free software projects with 4 other GNU/Linux distributions, Debian, Fedora&JBoss, Gentoo, and openSUSE.</p>
 <p>You can find more information about GSoC in <br><a href="http://code.google.com/soc/2008/">http://code.google.com/soc/2008</a> <br>and a list of the featured Pardus projects can be found at <br><a href="http://en.pardus-wiki.org/SummerOfCode2008Ideas">http://en.pardus-wiki.org/SummerOfCode2008Ideas</a>
 </p>
 <p>Good luck!</p>
