--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -37,11 +37,15 @@
             <!-- Manşet Başı -->
             <div id="mansetler">
                 <div id="manset">
-                    <h2>Pardus 2008 Escort'ta</h2>
-                    <img src="resim/escpardus.png" align="right" width="240" height="321" border="0" alt="Pardus Escort" style="padding-top: 4px; padding-left: 8px;" />
-                    <p>Türkiye'nin önde gelen bilgisayar markalarından <a href="http://www.escort.com.tr/?module=pardus" target="_blank">Escort</a> ile <a href="http://www.uekae.tubitak.gov.tr" target="_blank">TÜBİTAK UEKAE</a> arasında imzalanan bir anlaşma ile Pardus 2008 önyüklü masaüstü kişisel bilgisayarlar kullanıcılara sunulmaya başlandı. <strong>"Bilgisayarsız ev kalmayacak!"</strong> sloganı ile piyasaya sürülen Escort Pardus serisi özellikle acemi kullanıcıların Pardus'a erişmelerini çok kolaylaştıracak.</p>
-                    <p>Pardus'un önümüzdeki haftalarda yayımlanacak olan yeni kararlı sürümü <strong>Pardus 2008</strong>'ün, sürüm tarihi öncesinde Escort bilgisayarların gereklerine uygun olarak özel bir sürümü hazırlandı. <em>Leo</em>, <em>Tiger</em> ve <em>Cheetah</em> model isimleri ile üç farklı konfigürasyona sahip bilgisayarlara monitörsüz de sahip olunabilecek.</p>
-                    <p>Bilgisayar kullanıcıları 12 Mayıs 2008'den itibaren Pardus 2008 sürümü yüklü özel Escort bilgisayarlarına, perakende mağazalarında, e-ticaret sitelerinde ve Escort web sitesinden sahip olabilecekler. Escort ayrıca kullanıcılarına, TÜBİTAK UEKAE ile yaptığı anlaşma kapsamında, Pardus onaylı yetişmiş teknik kadrosu ile yazılım ve donanım desteği de sağlayacak.</p>
+                    <h2>Pardus 2008... pek yakında...</h2>
+                    <img src="resim/pardus08.png" align="right" width="240" height="321" border="0" alt="Pardus 2008" style="padding-top: 4px; padding-left: 8px;" />
+                    <p>Pardus 2008, yenilenmiş araçları, daha çok donanım desteği, daha iyi performans ile çok yakında indirilmeye hazır olacak.</p>
+                    <p>Otomatik yazıcı tanıma, gelişmiş yetkilendirme sistemi, çift ekranla çalışma gibi konularda güçlü olanaklar sunan yeni ekran yöneticisi ve popüler özgür yazılımların en yeni sürümleri Pardus 2008'le birlikte geliyor...</p>
+<p><a href="http://tr.pardus-wiki.org/Yol_Haritas%C3%BD:Pardus-2008" target="_blank">Yol haritası</a> ile gelişmelerin an be an takip edilebildiği sürecin sonuna ilişkin takvim de, geliştirici ekip tarafından açıklandı. <br>Bu takvime göre test, aday ve kararlı sürüm tarihleri:</p>
+                    <p>3 Haziran Salı : Pardus 2008 Beta
+                    <br>9 Haziran Pazartesi : Pardus 2008 RC1
+                    <br>16 Haziran Pazartesi : Pardus 2008 RC2
+                    <br>23 Haziran Pazartesi : Pardus 2008 </p>
                 </div>
             </div>
             <!-- Manşet Sonu -->
