--- a/trunk/web/miss/index.html
+++ b/trunk/web/miss/index.html
@@ -41,7 +41,7 @@
                     <img src="resim/pardus08.png" align="right" width="240" height="321" border="0" alt="Pardus 2008" style="padding-top: 4px; padding-left: 8px;" />
                     <p>Pardus 2008, yenilenmiş araçları, daha çok donanım desteği, daha iyi performans ile çok yakında indirilmeye hazır olacak.</p>
                     <p>Otomatik yazıcı tanıma, gelişmiş yetkilendirme sistemi, çift ekranla çalışma gibi konularda güçlü olanaklar sunan yeni ekran yöneticisi ve popüler özgür yazılımların en yeni sürümleri Pardus 2008'le birlikte geliyor...</p>
-<p><a href="http://tr.pardus-wiki.org/Yol_Haritas%C3%BD:Pardus-2008" target="_blank">Yol haritası</a> ile gelişmelerin an be an takip edilebildiği sürecin sonuna ilişkin takvim de, geliştirici ekip tarafından açıklandı. <br>Bu takvime göre test, aday ve kararlı sürüm tarihleri:</p>
+<p><a href="http://tr.pardus-wiki.org/Yol_Haritası:Pardus-2008" target="_blank">Yol haritası</a> ile gelişmelerin an be an takip edilebildiği sürecin sonuna ilişkin takvim de, geliştirici ekip tarafından açıklandı. <br>Bu takvime göre test, aday ve kararlı sürüm tarihleri:</p>
                     <p>3 Haziran Salı : Pardus 2008 Beta
                     <br>9 Haziran Pazartesi : Pardus 2008 RC1
                     <br>16 Haziran Pazartesi : Pardus 2008 RC2
