--- a/web/miss/eng/index.html
+++ b/web/miss/eng/index.html
@@ -35,22 +35,22 @@
 <TR>
 
 <TD width="70%" valign="top">
-<!-- Pardus 2007 -->
+<!-- Pardus 2008 -->
 
-                    <h2>Don't bother to search, Pardus@Google SOC!</h2>
-                    <img src="../resim/summerofcode.png" align="right" width="240" height="321" border="0" alt="Pardus" style="padding-top: 4px; padding-left: 8px;" />
+                    <h2>Pardus 2008 is on the road!</h2>
+                    <img src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?en&orange" align="right" width="160" height="55" border="0" alt="Pardus" style="padding-top: 4px; padding-left: 8px;" />
+<p>
+Pardus 2008, will be available for download very soon with brand new tools, better performance and wider hardware support.
+<p>
+New version will be coming with automatic printer detection & configuration support, advanced authentication infrastructure, easy configuration for multiple monitors and latest versions of many popular free softwares...
+<p>The roadmap will be as below:
 
-<p>Google Summer of Code is one of the biggest projects in open-source world since it started. Over the past three years, the program has brought together over 1500 students and 2000 mentors from 90 countries worldwide.
-</p>
-<p>
-Now, parallel to the internship programme of TÜBİTAK/UEKAE for Turkish college students, students worldwide will meet with Pardus during Google Summer of Code.</p>
-<p>
-The contributions in both projects will be available in Pardus as well as for all free software projects in Autumn '08. Pardus was selected to programme with many great free software projects with 4 other GNU/Linux distributions, Debian, Fedora&JBoss, Gentoo, and openSUSE.</p>
-<p>You can find more information about GSoC in <br><a href="http://code.google.com/soc/2008/">http://code.google.com/soc/2008</a> <br>and a list of the featured Pardus projects can be found at <br><a href="http://en.pardus-wiki.org/SummerOfCode2008Ideas">http://en.pardus-wiki.org/SummerOfCode2008Ideas</a>
-</p>
-<p>Good luck!</p>
+<p>June 3, Tuesday: Pardus 2008 Beta
+<br>June 9, Monday: Pardus 2008 RC1
+<br>June 16, Monday: Pardus 2008 RC2
+<br>June 23, Monday: Pardus 2008
 </TD>
-<!-- Pardus 2007 -->
+<!-- Pardus 2008 -->
 
 <TD width="30%" valign="top">
 <!-- haberler -->
