--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -38,7 +38,7 @@
             <div id="mansetler">
                 <div id="manset">
                     <h2>Pardus 2008... pek yakında...</h2>
-                    <div style="float:right;padding:50px;padding-top:80px;padding-bottom:80px;"><img src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?black" align="right" border="0" alt="Pardus 2008" style="padding-top: 4px; padding-left: 8px;" /></div>
+                    <img style="float:right;padding:60px;padding-top:80px;padding-bottom:80px;" src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?black" align="right" border="0" alt="Pardus 2008" />
                     <p>Pardus 2008, yenilenmiş araçları, daha çok donanım desteği, daha iyi performans ile çok yakında indirilmeye hazır olacak.</p>
                     <p>Otomatik yazıcı tanıma, gelişmiş yetkilendirme sistemi, çift ekranla çalışma gibi konularda güçlü olanaklar sunan yeni ekran yöneticisi ve popüler özgür yazılımların en yeni sürümleri Pardus 2008'le birlikte geliyor...</p>
 <p><a href="http://tr.pardus-wiki.org/Yol_Haritası:Pardus-2008" target="_blank">Yol haritası</a> ile gelişmelerin an be an takip edilebildiği sürecin sonuna ilişkin takvim de, geliştirici ekip tarafından açıklandı. <br>Bu takvime göre test, aday ve kararlı sürüm tarihleri:</p>
