--- a/web/miss/index.html
+++ b/web/miss/index.html
@@ -37,12 +37,11 @@
             <!-- Manşet Başı -->
             <div id="mansetler">
                 <div id="manset">
-                    <h2>Pardus 2008... pek yakında...</h2>
+                    <h2>Pardus 2008 Beta</h2>
                     <img style="float:right;padding:60px;padding-top:80px;padding-bottom:80px;" src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?black" align="right" border="0" alt="Pardus 2008" />
-                    <p>Pardus 2008, yenilenmiş araçları, daha çok donanım desteği, daha iyi performans ile çok yakında indirilmeye hazır olacak.</p>
-                    <p>Otomatik yazıcı tanıma, gelişmiş yetkilendirme sistemi, çift ekranla çalışma gibi konularda güçlü olanaklar sunan yeni ekran yöneticisi ve popüler özgür yazılımların en yeni sürümleri Pardus 2008'le birlikte geliyor...</p>
-<p><a href="http://tr.pardus-wiki.org/Yol_Haritası:Pardus-2008" target="_blank">Yol haritası</a> ile gelişmelerin an be an takip edilebildiği sürecin sonuna ilişkin takvim de, geliştirici ekip tarafından açıklandı. <br>Bu takvime göre test, aday ve kararlı sürüm tarihleri:</p>
-                    <p>3 Haziran Salı : Pardus 2008 Beta
+                    <p>Pardus 2008'in Beta1 deneme sürümü testçiler ve geliştiricilerin kullanımına sunuldu. Ayrıntılı bilgiye <a href="http://liste.pardus.org.tr/duyuru/2008-June/000065.html" target="_blank">buradan</a> erişebilirsiniz.</p>
+                    <p>Pardus 2008 <a href="http://tr.pardus-wiki.org/Yol_Haritası:Pardus-2008" target="_blank">yol haritası</a>na uygun olarak yürütülen çalışmaların takvimi ise şöyle:</p>
+                    <p><strong>3 Haziran Salı : Pardus 2008 Beta</strong>
                     <br>9 Haziran Pazartesi : Pardus 2008 RC1
                     <br>16 Haziran Pazartesi : Pardus 2008 RC2
                     <br>23 Haziran Pazartesi : Pardus 2008 </p>
@@ -56,6 +55,9 @@
                     <ul>
                         <li>
                         <p class="metin"><strong>14 Mayıs 2008</strong> // <a href="http://www.ozgurlukicin.com" target="_blank">Özgürlükiçin</a> topluluğunun çıkardığı E-Dergi, ikinci sayısını yayınladı. E-Dergi'ye <a href="http://www.ozgurlukicin.com/e-dergi/" target="_blank">buradan</a> ulaşabilirsiniz.</p>
+                        </li>
+                        <li>
+                        <p class="metin"><strong>12 Mayıs 2008</strong> // <a href="http://www.escort.com.tr/?module=pardus" target="_blank">escort</a> Bilgisayar, "Bilgisayarsız ev kalamayacak!" sloganı ile Pardus 2008 ön yüklü masaüstü ürünlerini piyasaya çıkardı.</p>
                         </li>
                         <li>
                         <p class="metin"><strong>9 Mayıs 2008</strong> // 2008 yazında Pardus <a href="http://tr.pardus-wiki.org/Staj2008" target="_blank">yaz stajı programı</a>na katılacak isimler belli oldu. Bu yaz 21 öğrenci Pardus için çalışacak.</p>
