--- a/web/miss/eng/index.html
+++ b/web/miss/eng/index.html
@@ -37,19 +37,15 @@
 <TD width="70%" valign="top">
 <!-- Pardus 2008 -->
 
-                    <h2>Pardus 2008 is on the road!</h2>
+                    <h2>Pardus 2008 Beta</h2>
                     <img src="http://cekirdek.pardus.org.tr/~gokmen/timer.php?en&orange" align="right" width="160" height="55" border="0" alt="Pardus" style="padding-top: 4px; padding-left: 8px;" />
-<p>
-Pardus 2008, will be available for download very soon with brand new tools, better performance and wider hardware support.
-<p>
-New version will be coming with automatic printer detection & configuration support, advanced authentication infrastructure, easy configuration for multiple monitors and latest versions of many popular free softwares...
-<p>The roadmap will be as below:
-
-<p>June 3, Tuesday: Pardus 2008 Beta
-<br>June 9, Monday: Pardus 2008 RC1
-<br>June 16, Monday: Pardus 2008 RC2
-<br>June 23, Monday: Pardus 2008
-</TD>
+                    <p>Pardus 2008 Beta1 version has been made available for testers and developers. More information can be obtained <a href="http://liste.pardus.org.tr/pardus-announce/2008-June/000037.html" target="_blank">here</a>.</p>
+                    <p>Pardus 2008, employing many important changes in terms of Pardus base technologies, current desktop technologies, visual design, and package support, contains Turkish spellchecking available right on the desktop, an fast and simple installation procedure, ease of use, and a set of Internet, multimedia, development and editing applications suitable for desktop system users' needs as always. Pardus products are available for free use and distribution under the terms of the <a href="http://www.pardus.org.tr/eng/gpl.html" target="_blank">GNU GPL</a>.</p>
+                    <p>Calendar of pre-release versions determined based on Pardus 2008 <a href="http://en.pardus-wiki.org/Pardus:Pardus-2008_Roadmap" target="_blank">roadmap</a> is as follows:</p>
+                    <p><strong>Tuesday, 3 June : Pardus 2008 Beta</strong>
+                    <br>Monday, 9 June : Pardus 2008 RC1
+                    <br>Monday, 16 June : Pardus 2008 RC2
+                    <br>Monday, 23 June : Pardus 2008 </p>
 <!-- Pardus 2008 -->
 
 <TD width="30%" valign="top">
