--- a/trunk/web/miss/indir.html
+++ b/trunk/web/miss/indir.html
@@ -80,7 +80,7 @@
             <li><a href="ftp://ftp.linux.org.tr/pub/pardus/kurulan/2008">LKD yansısı (ftp)</a></li>
             <li><a href="ftp://ftp.metu.edu.tr/pardus/pub/pardus/kurulan/2008">ODTÜ yansısı(ftp)</a></li>
         </ul></p>
-        <p>Ayrıca Pardus 2007.3 Lynx lynx'i <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008/Pardus_2008-Kurulan.iso.torrent">torrent</a> adresini kullanarak P2P araçları ile de indirebilirsiniz.</p>
+        <p>Ayrıca Pardus 2008'i <a href="ftp://ftp.pardus.org.tr/pub/pardus/kurulan/2008/Pardus_2008-Kurulan.iso.torrent">torrent</a> adresini kullanarak P2P araçları ile de indirebilirsiniz.</p>
       </p>
 </td></tr>
 
